{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "98f8e87c-0a4a-4c18-9d2d-35ee61199786",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "527ce87d-158b-44f9-ae32-969cf4022e69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPos",
                    "type": "Value",
                    "id": "80d26ec0-7bde-45a2-b941-b01d7c9b033f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryContact",
                    "type": "PassThrough",
                    "id": "669b2ebb-2ce9-484f-9801-16db526ad960",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryPos",
                    "type": "Value",
                    "id": "9592e855-934b-4070-8ee8-df608eed376b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e3eca655-058e-44db-99ec-ecee8239f231",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd03fc20-6c33-4da0-be92-59feebc0827f",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "PrimaryPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9efb7e9f-06ae-4a44-8020-4fd856edb596",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "SecondaryPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60e83da4-c41e-4e64-8a40-872f6a38bf5d",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "SecondaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "TouchScreen",
            "bindingGroup": "TouchScreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}